--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/ZizoHamoui" target="_blank" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/abdul-aziz-hamoui-52ab751a4/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -49,7 +49,6 @@
         <li><a href="#about" class="active"><i class="bi bi-house navicon"></i>about</a></li>
         <li><a href="#skills"><i class="bi bi-person navicon"></i> skills</a></li>
         <li><a href="#portfolio"><i class="bi bi-file-earmark-text navicon"></i> porfolio</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> contact</a></li>
       </ul>
     </nav>
 
