--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -40,8 +40,8 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="github"><i class="bi bi-github"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/ZizoHamoui" target="_blank" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/abdul-aziz-hamoui-52ab751a4/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -50,7 +50,6 @@
         <li><a href="#process"><i class="bi bi-person navicon"></i> Process</a></li>
         <li><a href="#findings"><i class="bi bi-file-earmark-text navicon"></i> Findings</a></li>
         <li><a href="#reflection"><i class="bi bi-envelope navicon"></i> Reflection</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
 
